; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_host.c_host_system_send.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/common/extr_host.c_host_system_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i64)* }

@last_system_report = common dso_local global i64 0, align 8
@driver = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @host_system_send(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = load i64, i64* @last_system_report, align 8
  %5 = icmp eq i64 %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %18

7:                                                ; preds = %1
  %8 = load i64, i64* %2, align 8
  store i64 %8, i64* @last_system_report, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @driver, align 8
  %10 = icmp ne %struct.TYPE_2__* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %7
  br label %18

12:                                               ; preds = %7
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @driver, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32 (i64)*, i32 (i64)** %14, align 8
  %16 = load i64, i64* %2, align 8
  %17 = call i32 %15(i64 %16)
  br label %18

18:                                               ; preds = %12, %11, %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
